<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background= "?attr/colorPrimary"
    android:orientation="vertical"
    android:padding="10dp">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="14dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/search"
            app:cornerRadius="16dp"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/button_interval_fest_screen"
            app:iconTint="@color/black_button_font"
            style = "@style/ButtonStyle"
            />

        <Button
            android:id="@+id/media_library"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/media_library"
            app:cornerRadius="16dp"
            app:icon="@drawable/media_library"
            app:iconGravity="textStart"
            app:iconTint="@color/black_button_font"
            app:iconPadding="@dimen/button_interval_fest_screen"
            style = "@style/ButtonStyle"/>
        <Button
            android:id="@+id/setting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/settings"
            app:cornerRadius="16dp"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconTint="@color/black_button_font"
            app:iconPadding="@dimen/button_interval_fest_screen"
            style = "@style/ButtonStyle"/>

    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>