<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_2"
    android:orientation="vertical"
    android:padding="@dimen/button_interval_fest_screen">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/arrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/arrow"
        app:title="@string/settings">


    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/string_star_2_screen"
            android:layout_marginTop="@dimen/button_interval21"
            android:layout_marginEnd="@dimen/string_end_2_screen"
            android:layout_marginBottom="@dimen/button_interval21"
            android:text="@string/dark_theme"
            android:textAllCaps="false"
            android:textColor="@color/black_2"
            android:textSize="@dimen/string_text_size_2_screen" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/button_interval21"
            android:layout_marginEnd="18dp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/button_interval21"
            android:layout_marginEnd="@dimen/button_interval21"
            android:src="@drawable/share_app" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/string_star_2_screen"
            android:layout_marginTop="@dimen/button_interval21"
            android:layout_marginEnd="@dimen/string_end_2_screen"
            android:layout_marginBottom="@dimen/button_interval21"
            android:text="@string/share_app"
            android:textAllCaps="false"
            android:textColor="@color/black_2"
            android:textSize="@dimen/string_text_size_2_screen" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/button_interval25"
            android:layout_marginEnd="@dimen/button_interval25"
            android:src="@drawable/write_support" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="@dimen/button_interval21"
            android:src="@drawable/write_support2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/button_interval31"
            android:layout_marginEnd="27dp"
            android:src="@drawable/write_support3" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/button_interval31"
            android:layout_marginEnd="33dp"
            android:src="@drawable/write_support3" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/string_star_2_screen"
            android:layout_marginTop="@dimen/button_interval21"
            android:layout_marginEnd="@dimen/string_end_2_screen"
            android:layout_marginBottom="@dimen/button_interval21"
            android:text="@string/write_support"
            android:textAllCaps="false"
            android:textColor="@color/black_2"
            android:textSize="@dimen/string_text_size_2_screen" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/uuser_agreement" />


        <TextView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/string_star_2_screen"
            android:layout_marginTop="@dimen/button_interval21"
            android:layout_marginEnd="@dimen/string_end_2_screen"
            android:layout_marginBottom="@dimen/button_interval21"
            android:text="@string/uUser_agreement"
            android:textAllCaps="false"
            android:textColor="@color/black_2"
            android:textSize="@dimen/string_text_size_2_screen" />


    </FrameLayout>
</LinearLayout>